sections structure and math trade imgs

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
         </div>
         <a href="#" class="hover:text-gray-400">Início</a>
+        <a href="#" class="hover:text-gray-400">Sobre</a>
         <a href="#" class="hover:text-gray-400">Math Trade BH</a>
         <a href="#" class="hover:text-gray-400">Iniciativas BGBH</a>
         <a href="#" class="hover:text-gray-400">Eventos</a>
@@ -51,13 +52,9 @@
 
       <!-- Menu MD/LG -->
       <div class="hidden text-white space-x-8 md:items-center md:flex">
-        <!-- Link para página inicial -->
         <a href="#" class="hover:text-gray-400">Início</a>
-
-        <!-- Link para Math Trade BH -->
+        <a href="#" class="hover:text-gray-400">Sobre</a>
         <a href="#" class="hover:text-gray-400">Math Trade BH</a>
-
-        <!-- Menu com submenu -->
         <div class="relative group">
           <span class="hover:text-gray-400">Iniciativas BGBH</span>
           <div class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
@@ -65,16 +62,12 @@
             <a href="#" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Resenha com Jogatina</a>
           </div>
         </div>
-
-        <!-- Link para Eventos -->
         <a href="#" class="hover:text-gray-400">Eventos</a>
-
-        <!-- Link para Contato -->
         <a href="#" class="hover:text-gray-400">Contato</a>
       </div>
     </nav>
 
-    <!-- Hero elements -->
+    <!-- BANNER PRINCIPAL -->
     <div class="flex flex-col items-center justify-center relative h-[calc(80vh-56px)] text-white">
       <img class="h-[150px]" src="src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
       <span class="mt-5">O seu portal de jogos de tabuleiro</span>
@@ -103,13 +96,51 @@
       </div>
     </div>
   </header>
-  <main>
-    <section>seçao 1</section>
-    <section>seçao 2</section>
-    <section>seçao 3</section>
+
+  <!-- CONTEUDO PRINCIPAL -->
+  <main class="py-6 px-3 max-w-[90vw] mx-auto">
+    <div>
+      <p class="font-bold text-gray-900 text-lg">
+        Bem vindos ao portal BoardgameBH (BGBH)! Nos dedicamos a iniciativas para crescimento do hobby de
+        <em class="text-green-700">jogos de tabuleiro modernos</em> promovendo e dinamizando diversos eventos e
+        encontros em Belo Horizonte e região, jogatinas online e muito mais.
+      </p>
+    </div>
+    <hr class="my-5 border-green-600">
+    <section>
+      <h2 class="font-extrabold text-gray-900 text-2xl">MATH TRADE BELO HORIZONTE</h2>
+      <p>Regularmente realizamos a <em class="font-bold text-green-700">MATH TRADE BH</em>, para que jogadores possam
+        renovar as opções de jogos na estante.
+      </p>
+      <p>
+        Clique nas imagens abaixo para conhecer o que é, ver regras gerais ou saber detalhes específicos da última
+        edição.
+      </p>
+      <div class="flex gap-2 items-center justify-center mt-3 flex-col md:flex-row">
+        <a href="https://bgbh.com.br/mathtrade-bh/o-que-e">
+          <img src="src/img/mathtrade/o-que-e-uma-math-trade.jpeg" alt="Math Trade BH - O que é">
+        </a>
+        <a href="https://bgbh.com.br/mathtrade-bh/regras-gerais">
+          <img src="src/img/mathtrade/regras-gerais-math-trade.jpeg" alt="Math Trade BH - Regras Gerais">
+        </a>
+        <a href="https://bgbh.com.br/mathtrade-bh/edicao-novembro-2024">
+          <img src="src/img/mathtrade/615x330-MT9.png" alt="Math Trade BH - Edição Novembro 2024">
+        </a>
+      </div>
+    </section>
+    <section class="mt-5">
+      <h2 class="font-extrabold text-gray-900 text-2xl">JOGA NO QG</h2>
+    </section>
+    <section class="mt-5">
+      <h2 class="font-extrabold text-gray-900 text-2xl">DEPOIMENTOS</h2>
+    </section>
+    <section class="mt-5">
+      <h2 class="font-extrabold text-gray-900 text-2xl">PARCEIROS</h2>
+    </section>
   </main>
 
-  <footer>
+  <!-- RODAPE -->
+  <footer class="bg-black px-3 py-5 text-white">
     rodape
   </footer>
 
