--- a/index.html
+++ b/index.html
@@ -140,8 +140,47 @@
   </main>
 
   <!-- RODAPE -->
-  <footer class="bg-black px-3 py-5 text-white">
-    rodape
+  <footer class="bg-gray-800 px-3 py-5 text-white">
+    <div class="grid md:grid-flow-col md:grid-cols-2 text-white gap-4">
+      <div>
+        <strong class="font-bold block mb-3">SOBRE O PROJETO</strong>
+        <span class="text-sm">
+          O <strong class="font-semibold">BoardgameBH</strong> é um projeto que tem como foco o crescimento e a
+          visibilidade do Boardgame no país. O portal tem
+          Belo Horizonte e região como carro chefe, mas não possui fronteiras, promovendo e realizando ações de amplo
+          interesse e com um público espalhado por todo país, como torneios online, divulgação de lançamentos e conteúdo
+          digital. Diversos braços do projeto ainda estão em desenvolvimento e em breve serão apresentados para o grande
+          público. Enquanto isso, aproveite todas as funcionalidades liberadas e não deixe de apoiar esse e os demais
+          projetos voltados para o nosso hobby.
+          <strong class="font-semibold">Let’s Play!</strong>
+        </span>
+      </div>
+      <div class="flex flex-col justify-between">
+        <div>
+          <strong class="block mb-3">APOIE</strong>
+          <span>Entre em contato para ser um parceiro ou apoiador do projeto!</span>
+        </div>
+        <div>
+          <div class="font-bold mt-4 mb-3">SIGA</div>
+          <ul class="flex gap-4">
+            <li>
+              <a target="_blank" href="https://www.instagram.com/boardgamebh/" aria-label="Instagram">
+                <i class="icone bi bi-instagram fs-3 block hover:scale-110"></i>
+              </a>
+            </li>
+            <li class="group">
+              <a target="_blank" href="https://www.facebook.com/boardgamebh/" aria-label="Facebook">
+                <i class="icone bi bi-facebook fs-3 block hover:scale-110"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="mt-4 font-semibold">
+          © BGBH 2020 - Todos os direitos reservados
+        </div>
+      </div>
+
+    </div>
   </footer>
 
   <script type="module" src="/src/js/main.js"></script>
