--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
   </header>
 
   <!-- CONTEUDO PRINCIPAL -->
-  <main class="py-6 px-3 max-w-[90vw] mx-auto">
-    <div>
+  <main class="py-6">
+    <div class="max-w-[90vw] mx-auto">
       <p class="font-bold text-gray-900 text-lg">
         Bem vindos ao portal BoardgameBH (BGBH)! Nos dedicamos a iniciativas para crescimento do hobby de
         <em class="text-green-700">jogos de tabuleiro modernos</em> promovendo e dinamizando diversos eventos e
@@ -110,7 +110,7 @@
       </p>
     </div>
     <hr class="my-5 border-green-600">
-    <section>
+    <section class="max-w-[90vw] mx-auto" id="math_trade">
       <h2 class="font-extrabold text-gray-900 text-2xl">MATH TRADE BELO HORIZONTE</h2>
       <p>Regularmente realizamos a <em class="font-bold text-green-700">MATH TRADE BH</em>, para que jogadores possam
         renovar as opções de jogos na estante.
@@ -131,14 +131,60 @@
         </a>
       </div>
     </section>
-    <section class="mt-5">
+    <section class="mt-5 max-w-[90vw] mx-auto py-5 relative" id="joga_qg">
       <h2 class="font-extrabold text-gray-900 text-2xl">JOGA NO QG</h2>
+      <span>
+        Promovemos encontros mensais de jogos em espaços reservados e o destaque do evento é a interação entre
+        jogadores.
+      </span>
     </section>
-    <section class="mt-5">
-      <h2 class="font-extrabold text-gray-900 text-2xl">DEPOIMENTOS</h2>
+    <section class="bg-lime-900 pt-6 pb-10 relative bg-[url('/src/img/geral/brass2.png')] text-white parallax-effect"
+      id="depoimentos">
+      <div class="max-w-[90vw] mx-auto">
+        <h2 class="font-extrabold text-2xl">DEPOIMENTOS</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-5 mt-4">
+          <article class="border border-gray-200 p-2">
+            <p>
+              "Eu sempre achei jogos de tabuleiro interessantes, mas nunca soube por onde começar. Quando fui ao Joga no
+              QG, fiquei impressionada com a paciência e a gentileza de todos em me ensinar os jogos. Saí de lá com
+              novas
+              amizades e a certeza de que quero mergulhar ainda mais nesse mundo incrível!"
+            </p>
+            <footer class="mt-2">
+              Monike Alvim
+            </footer>
+          </article>
+          <article class="border border-gray-200 p-2">
+            <p>
+              "Acompanho as Math Trades do BoardgameBH desde o início, e a cada edição elas ficam melhores! Já troquei
+              dezenas de jogos e sempre fiquei satisfeito. É uma forma fantástica de renovar a coleção. Esse projeto
+              mantém o hobby vivo e dinâmico para quem já está no meio há mais tempo."
+            </p>
+            <footer class="mt-2">
+              Ênyo Saldanha
+            </footer>
+          </article>
+          <article class="border border-gray-200 p-2">
+            <p>
+              Descobri o BoardgameBH na Nerd Xperience e foi uma das melhores coisas que me aconteceram no hobby! Não só
+              conheci jogos que eu nem sabia que existiam, mas também fiz amigos incríveis. Hoje, participo de vários
+              grupos de WhatsApp e sempre tenho com quem combinar uma jogatina. É uma comunidade incrível!"
+            </p>
+            <footer class="mt-2">
+              Jacqueline Oliveira
+            </footer>
+          </article>
+        </div>
+      </div>
     </section>
-    <section class="mt-5">
-      <h2 class="font-extrabold text-gray-900 text-2xl">PARCEIROS</h2>
+    <section class="py-10 bg-[url('/src/img/geral/carcassonne.png')] parallax-effect" id="parceiros">
+      <div class="max-w-[90vw] mx-auto text-white">
+        <h2 class="font-extrabold text-2xl">PARCEIROS</h2>
+        <div class="flex gap-10">
+          <img class="size-28" src="/src/img/parceiros/cuidadocomopanda.png" alt="Cuidado com o Panda">
+          <img class="size-28" src="/src/img/parceiros/logo_VJBG_fundo_transparente.png" alt="Vamos Jogar Boardgame">
+        </div>
+      </div>
     </section>
   </main>
 
@@ -160,19 +206,19 @@
       <div class="flex flex-col justify-between">
         <div>
           <strong class="block mb-3 text-white">APOIE</strong>
-          <span>Entre em contato para ser um parceiro ou apoiador do projeto!</span>
+          <span class="text-sm">Entre em contato para ser um parceiro ou apoiador do projeto!</span>
         </div>
         <div>
           <div class="font-bold mt-4 mb-3 text-white">SIGA</div>
           <ul class="flex gap-4">
             <li>
               <a target="_blank" href="https://www.instagram.com/boardgamebh/" aria-label="Instagram">
-                <i class="icone bi bi-instagram fs-3 block hover:scale-125"></i>
+                <i class="bi bi-instagram text-[24px] block hover:scale-125"></i>
               </a>
             </li>
             <li class="group">
               <a target="_blank" href="https://www.facebook.com/boardgamebh/" aria-label="Facebook">
-                <i class="icone bi bi-facebook fs-3 block hover:scale-125"></i>
+                <i class="bi bi-facebook text-[24px] block hover:scale-125"></i>
               </a>
             </li>
           </ul>
