--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
         Promovemos encontros mensais de jogos em espaços reservados e o destaque do evento é a interação entre
         jogadores.
       </span>
+      <div class="flex w-full flex-wrap gap-3 mt-3">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+        <img class="w-1/4 h-auto" src="/src/img//geral/azul.png" alt="">
+      </div>
     </section>
     <section class="bg-lime-900 pt-6 pb-10 relative bg-[url('/src/img/geral/brass2.png')] text-white parallax-effect"
       id="depoimentos">
