--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
         <!-- Navigation Buttons -->
         <button id="prev"
-          class="absolute top-1/2 left-2 -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full">
+          class="absolute top-1/2 left-2 -translate-y-1/2 bg-gray-500 bg-opacity-40 hover:bg-opacity-70 text-white p-2">
           <i class="bi bi-chevron-left"></i>
         </button>
         <button id="next"
-          class="absolute top-1/2 right-2 -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full">
+          class="absolute top-1/2 right-2 -translate-y-1/2 bg-gray-500 bg-opacity-40 hover:bg-opacity-70 text-white p-2">
           <i class="bi bi-chevron-right"></i>
         </button>
       </div>
