Page O que é Math Trade

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
       <div class="relative group">
         <span class="hover:text-gray-400">Iniciativas BGBH</span>
         <div class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
-          <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga no QG</a>
-          <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Resenha com
-            Jogatina</a>
+          <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga no QG!</a>
+          <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+            Resenha com Jogatina
+          </a>
+          <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+            Outras iniciativas
+          </a>
         </div>
       </div>
       <a href="/2025/em-breve.html" class="hover:text-gray-400">Eventos</a>
@@ -120,7 +124,7 @@
         edição.
       </p>
       <div class="flex gap-2 items-center justify-center mt-3 flex-col md:flex-row">
-        <a href="https://bgbh.com.br/mathtrade-bh/o-que-e">
+        <a href="/2025/o-que-e">
           <img src="src/img/mathtrade/o-que-e-uma-math-trade.jpeg" alt="Math Trade BH - O que é">
         </a>
         <a href="https://bgbh.com.br/mathtrade-bh/regras-gerais">
@@ -206,7 +210,7 @@
   </main>
 
   <!-- RODAPE -->
-  <footer class="bg-gray-800">
+  <footer class="bg-gray-800 bottom-0 relative w-full">
     <div class="px-3 py-5 max-w-[90vw] mx-auto grid md:grid-flow-col md:grid-cols-2 text-gray-300 gap-4">
       <div>
         <strong class="font-bold block mb-3 text-white">SOBRE O PROJETO</strong>
