--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -194,7 +194,7 @@
                             <span class="font-bold">Lucas</span> receberá o
                             <span class="text-yellow-700 font-bold">PUERTO RICO</span> do
                             <span class="font-bold">Felipe</span> e entregará o
-                            <span class="text-blue-700 font-bold">SURVIVE</span>
+                            <span class="text-blue-700 font-bold">SURVIVE</span> para o
                             <span class="font-bold">Marcelo</span>
                         </li>
                         <li>
@@ -295,6 +295,7 @@
         <!-- MAIS DETALHES DAS ETAPAS -->
         <section>
             <h2 class="text-gray-900 font-extrabold text-2xl text-center">DETALHES DE CADA UMA DAS ETAPAS</h2>
+            <p>Clique em cada link abaixo para ver mais detalhes das etapas de uma Math Trade</p>
             <div class="flex flex-col gap-3 mt-4">
                 <!-- Links para abrir os modais -->
                 <ul class="list-disc list-inside text-gray-700 space-y-4">
