--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         edição.
       </p>
       <div class="flex gap-2 items-center justify-center mt-3 flex-col md:flex-row">
-        <a href="/2025/o-que-e">
+        <a href="/2025/mathtrade-bh/o-que-e">
           <img src="src/img/mathtrade/o-que-e-uma-math-trade.jpeg" alt="Math Trade BH - O que é">
         </a>
         <a href="https://bgbh.com.br/mathtrade-bh/regras-gerais">
