--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -230,7 +230,7 @@
         <hr class="w-80vw mx-auto my-4">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
             <!-- O QUE É PRECISO PARA PARTICIPAR -->
-            <section class="text-left md:border-r-2">
+            <section class="text-left md:border-r-2 md:pr-1">
                 <h2 class="text-gray-900 font-extrabold text-2xl text-center">O QUE É PRECISO PARA PARTICIPAR?</h2>
                 <p>Para participar de uma Math Trade é preciso:</p>
                 <ol class="list-decimal pl-6">
