--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
   </footer>
 
   <script type="module" src="/src/js/main.js"></script>
+  <script type="module" src="/src/js/home.js"></script>
 </body>
 
 </html>
